<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp"
    app:ignore="NamespaceTypo">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_red"
            android:padding="10dp"
            android:prompt="@string/spinner_title" />

        <LinearLayout xmlns:app="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">


            <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_marginLeft="10dp"

                app:cardCornerRadius="8dp">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical">
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:hint="@string/hint_username">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_agentName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:singleLine="true" />

                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"

                    android:hint="@string/hint_mobile_val"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_mobileNo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:singleLine="true"
                        android:text="8433566216"
                        android:maxLength="10" />

                </com.google.android.material.textfield.TextInputLayout>


</LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout xmlns:app="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_marginLeft="10dp"

                app:cardCornerRadius="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/PhotoImg"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/bg_red"
                        android:gravity="center"
                        android:scaleType="fitXY" />

                    <TextView
                        android:id="@+id/addPhoto"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:padding="10dp"
                        android:textAllCaps="false"

                        android:text="Add Photo"
                        android:textColor="@android:color/black" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout xmlns:app="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_marginLeft="10dp"

                app:cardCornerRadius="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="Experties"
                        android:textColor="@android:color/black" />

                    <CheckBox
                        android:id="@+id/checkBoxJeans"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:text="Jeans" />
                    <CheckBox
                        android:id="@+id/checkBoxShoes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:text="Shoes" />
                    <CheckBox
                        android:id="@+id/checkBoxLadisKurtas"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:text="Ladis Kurtas" />
                    <CheckBox
                        android:id="@+id/checkBoxwatches"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:text="Watches" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <androidx.cardview.widget.CardView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_marginLeft="10dp"

                app:cardCornerRadius="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="Brands"
                        android:textColor="@android:color/black" />

                    <CheckBox
                        android:id="@+id/checkBoxLevi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:text="Levis" />

                    <CheckBox
                        android:id="@+id/checkBoxMufti"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:text="Mufti" />
                    <CheckBox
                        android:id="@+id/checkBoxSpykar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:text="Spykar" />
                    <CheckBox
                        android:id="@+id/checkBoxLee"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:text="Lee" />
                    <CheckBox
                        android:id="@+id/checkBoxPepeJeans"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:text="Pepe Jeans" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
        <Button
            android:id="@+id/submitBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="Submit"
            android:layout_gravity="center"
            android:gravity="center"
            android:background="@android:color/holo_red_dark"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textStyle="bold"/>
    </LinearLayout>
</LinearLayout>
    </ScrollView>
    </LinearLayout>
